@@ -4,6 +4,7 @@ For a detailed list of changes, please see ChangeLog.
 0.13 (UNRELEASED):
 
  * Enhancements:
+   - Added random password generation
 
  * Bug fixes:
 
